# C3LLS

./: LICENSE  Organoid_segmentation.py  Postprocess_nuclei.py  README.md  cell_surface.py  count_dead.py  create_and_run_nnunet.py  crop_images.py  organoid_cell_segmentation.py  pyproject.toml  single_cell_segmentation.py
C3LLS/: Menus.py  Organoid_segmentation.py  cell_surface.py  count_dead_nuclei.py  create_and_run_model.py  main.py  organoid_cell_segmentation.py  single_cell_segmentation.py
C3LLS.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Documentation/: Count Dead Nuclei.md  Create C3LLS Model.md  Create Training Data.md  Quantify Cell Surface Marker.md
Documentation/AI Experienced/: Create Training Data.md
Documentation/AI Experienced Users/: Adjusting C3LLS.md  Adjusting Training.md  Create Training Data.md
Documentation/New to AI/: Count Dead Nuclei.md  Create C3LLS Model.md  Create Training Data.md  Quantify Cell Surface Marker.md
UW Model/: model_plans.json
